--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -127,12 +127,13 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, we c
 \end{itemize}
 \subsection{Reference Documents}
 \begin{itemize}
-    \item {Specification document: "Assignment RDD AY 2023-2024"}
-    \item {RASD reference template: “02g.CreatingRASD”}
-    \item {Paper: "Jackson and Zave: the world and the machine"}
-    \item {UML official specification \href{https://www.omg.org/spec/UML/}{https://www.omg.org/spec/UML/}}
-    \item {Alloy official documentation: \href{https://alloytools.org/documentation.html}{https://alloytools.org/documentation.html}}
-\item {GitHub  API official documentation \href{https://docs.github.com/en/rest/guides/getting-started-with-the-rest-api?apiVersion=2022-11-28}{https://docs.github.com/en/rest/guides/getting-started-with-the-rest-api?apiVersion=2022-11-28}}
+    \item Specification document: "Assignment RDD AY 2023-2024"
+    \item RASD reference template: “02g.CreatingRASD”
+    \item Paper: "Jackson and Zave: the world and the machine"
+    \item UML official specification \href{https://www.omg.org/spec/UML}{https://www.omg.org/spec/UML}
+    \item Alloy official documentation: \href{https://alloytools.org/documentation.html}{https://alloytools.org/documentation.html}
+    \item GitHub API official documentation: \href{https://docs.github.com/en/rest/guides/getting-started-with-the-rest-api?apiVersion=2022-11-28}{https://docs.github.com/en/rest/guides/getting-started-with-the-rest-api?apiVersion=2022-11-28}
+    \item General Data Protection Regulation (GDPR) official text: \href{https://gdpr-info.eu}{https://gdpr-info.eu}
 \end{itemize}
 
 \subsection{Document Structure}
