--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -77,7 +77,9 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, we c
         Platform creates GitHub repository and sends the link to the students of the teams subscribed to the battle & M & Y \\
         Platform sends notification to users & M & Y \\
         System computes and updates battle score of a team & M & Y \\
+        System  updates battle ranking of teams & M & Y \\
         System computes and updates student's tournament personal score & M & Y \\
+        System  updates tournament ranking of students & M & Y \\
         System evaluates quality level of a submission through static analysis & M & Y \\
         System checks login data & M & N \\
         System pulls new submission from GitHub & M & N \\
